# PacMan-game

./: Button.cpp  Button.h  CMakeLists.txt  CollisionChecker.cpp  CollisionChecker.h  Components.h  EntityComponentSystem.h  Food.cpp  Food.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Ghost.cpp  Ghost.h  Map.cpp  Map.h  Page.cpp  Page.h  Player.cpp  Player.h  README.md  Result.cpp  Result.h  TextObject.cpp  TextObject.h  TextureCreator.cpp  TextureCreator.h  main.cpp
assets/: Ghosts.aseprite
other/: FoodCoordinates.txt  MapStructure.txt
